--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,39 @@
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
+
+
+html{
+  font-size: 16px;
+}  
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  html {
+    font-size: 11px;
   }
 
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 8px;
+  }
+}
   body { 
     width: 100%;
   }
