--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,7 @@
 .about-page { 
     width: 100%;
-    height:600px;
-    background-color: aliceblue;
+    min-height: 400px;
+    background-color: rgb(255, 255, 255);
     position: relative;
     background-color:  #1b2036;;
     display: flex;    
@@ -11,10 +11,11 @@
 }
 
 .about-title {
-    font-size: 3em;
+    font-size: 3rem;
     color: white;
     position: relative;
-    top: 50px;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .me-text { 
@@ -24,10 +25,9 @@
 
 .about-text-box { 
     background-color: rgb(64, 67, 97);
-    height: 300px;
-    width: 50vw;
+    width: 50%;
+    max-width: 900px;
     position: relative;
-    bottom: 20px;
     display: flex;
     flex-direction: row;
     padding: 50px;
@@ -37,36 +37,48 @@
 
 .about-text-intro {
     color: rgb(255, 255, 255);
-    padding: 20px;
+    padding: 2em;
     vertical-align: center;
-    font-size: 1.1em;
-    line-height: 1.6em;
-    letter-spacing: 0.8px; 
+    font-size: 1.2rem;
+    line-height: 1.7em;
+    letter-spacing: 0.1em; 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: left;
-    gap:40px;
+    gap:2em;
+    font-weight: 600;
 }
 
 .about-text-intro button{ 
     background-color: turquoise;
-    height: 40px;
-    width: 300px;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 0.8em;
+    min-width: 10em;
+    font-family: 'tektur';
+    font-weight: bold;
+    font-size: 1rem;
     color:black;
     box-shadow: 2px 2px 5px #83838b;
     min-height: 40px;
-
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
 }
+
 .animated-chess { 
-    width: 40%;
-    min-width: 200px;
+    min-width: 5em;
+    max-height: 10em;
 }
 
 .comp-text { 
     color: rgb(0, 255, 221);
 }
 
+@media screen and (max-width: 500px) {
+    .skills-collection {
+        flex-direction: column;
+    
+    }
+}
