--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,31 +1,31 @@
 nav { 
     position: absolute;
-    right: 0;
-    z-index: 1;
-    margin-top: 20px;
-    margin-right: 10px;
-    top: 30px; 
-    left: 50%; 
+    z-index: 2;    
+    width: 70%;
+    top: 60%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
 ul {
     display: flex;
     justify-content: space-between;
-    height: 70px;
     list-style: none;
     background-color: rgb(0,0,0,0.7);
     margin: 0;
     border-radius: 20px;
+    padding: 0em;
 }
 
 li { 
+    flex: 1;
     color:white;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 5em;
 }
 
 li.active { 
@@ -45,6 +45,103 @@ a {
     outline: none;
     color:white;
     text-decoration: none;
+    width: 100%;
+    height: 100%;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 5em;
 }
 
 
+.menu-icon {
+    height: 4em;
+    width: 4em;
+    background-color: rgb(0,0,0,0.7);
+    top: 0; /* Adjust as needed */
+    right: 3em; /* Adjust as needed */
+    float: right;
+    position: absolute;
+    z-index: 2;
+    top: 40%;
+    border-radius: 5em;
+    padding: 0;
+    text-align: center;
+    line-height: 3em;
+    display: none;
+}   
+
+.gg-menu { 
+    color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.nav-container { 
+    width: 100%;
+    height: 90px;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+}
+
+@media screen and (max-width: 500px) {
+    .menu-icon { 
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .nav-container { 
+        position: fixed;
+        z-index: 2;
+        height: 50%;
+    }
+    nav { 
+        position: absolute;
+        z-index: 2;    
+        width: 70%;
+        float:right;
+
+        top: 4em;
+        left: 0%;
+        right: 0;
+        transform: translate(45%, -0%);
+
+    }
+    ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        list-style: none;
+        background-color: rgb(0,0,0,0.7);
+        margin: 0;
+        border-radius: 20px;
+        padding: 0;
+        height: 30em;
+        width: 10em;
+        position: fixed;
+        right:0;
+    }
+    li { 
+        flex: 1;
+        color:white;
+        width: 100%;
+        height: 10em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    li:first-child.active {
+        border-radius: 20px 0px 0px 0px;
+      }
+      
+    li:last-child.active  {
+        border-radius: 0px 0px 0px 20px;
+    
+    }
+    
+  }
