--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,6 +1,5 @@
 .skills-page { 
     width: 100%;
-    height:1000px;
     position: relative;
     background-color:  #1b2036;;
     display: flex;    
@@ -11,64 +10,88 @@
 
 .skills-box {
     position: relative;
-    top:100px;
+    margin-top: 1em;
     background-color: rgb(64, 67, 97);
     width: 70%;
     border-radius: 40px;
-    padding: 40px;
+    padding: 5em;
     display: flex; 
     flex-direction: column;
     align-content: flex-start;
     align-items: center;
-    height: 700px;
     box-shadow: 5px 10px 10px #38383f;
 
 }
+
 .skills-title { 
+    margin-top: 1em;
+    margin-bottom: 1em;
     font-size: 3em;
     color: turquoise;
     position: relative;
-    top: 50px;
 }
 
 .skills-paragraph { 
-    max-width: 1200px;
-    color: aliceblue;
+    max-width: 1100px;
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
     line-height: 1.7em;
-    letter-spacing: 0.001em; 
-
+    letter-spacing: 0.1em; 
+    font-weight: 600;
 }
 
 .proglang { 
     color: turquoise;
-
 }
 
 .skills-collection { 
     display: flex;
     flex-direction: row;
     align-content: space-evenly;
-    width: 100%;
     align-items: center;
     position: relative;
-    top: 30px;
-    gap: 15px;
-    height: 100%;
+    gap: 2em;
+    top: 2em;
+    align-items: stretch;
+
 }
 
 .skills-card { 
     width: 100%;
     text-align: center;
     background-color: rgb(40, 40, 63);
-    height: 90%;
     border-radius: 10px;
     box-shadow: 2px 5px 5px #242427;
-
+    display: flex;    
+    flex-direction: column;
+    align-content: flex-start;
+    flex: 1;
 }
 
 .skills-card h2 { 
     font-size: 1.5em;
     color: rgb(247, 115, 137);
     position: relative;
-    top: 20px;
+    top: 1.5em;
+}
+
+.skills-icons { 
+    display: flex;    
+    align-items: stretch;
+    position: relative;
+    flex-wrap: wrap;
+    margin-top: 0.5em;
+    gap: 1em;
+    color: white;
+    justify-content: space-between;
+    flex: 1;
+    padding: 1em;
+    font-size: 5em;
+}
+
+@media screen and (max-width: 500px) {
+    .skills-collection {
+        flex-direction: column;
+    
+    }
 }
